--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aditokmo/react-cli-setup",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A fast React CLI to jumpstart your projects. It sets up your libraries and organizes a scalable folder structure so you can skip the configuration and go straight to coding.",
   "main": "dist/index.js",
   "type": "module",
@@ -16,19 +16,19 @@
     "react",
     "cli",
     "vite",
-    "boilerplate",
+    "project-generator",
+    "react-starter",
+    "react-boilerplate",
+    "feature-based-architecture",
+    "folder-structure",
     "tanstack-router",
     "tanstack-query",
-    "tanstack-form",
     "zustand",
     "shadcn-ui",
-    "tailwind",
-    "project-generator",
-    "react-hook-form",
-    "zod",
-    "enterprise-architecture",
+    "tailwind-css",
     "frontend-architecture",
-    "react-architecture"
+    "dx",
+    "automated-setup"
   ],
   "repository": {
     "type": "git",
@@ -45,7 +45,10 @@
     "dist",
     "templates"
   ],
-  "author": "aditokmo",
+  "author": {
+    "name": "aditokmo",
+    "url": "https://github.com/aditokmo"
+  },
   "license": "ISC",
   "packageManager": "pnpm@10.27.0",
   "dependencies": {
